# EjercicioEquipoFutbol

./: CMakeLists.txt  Defensa.cpp  Defensa.h  Delantero.cpp  Delantero.h  Equipo.cpp  Equipo.h  Jugador.cpp  Jugador.h  Mediocampista.cpp  Mediocampista.h  Persona.cpp  Persona.h  Portero.cpp  Portero.h  Tecnico.cpp  Tecnico.h  main.cpp
